--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -59,7 +59,7 @@
   color: #ff6700;
 }
 
-.box-bd {
+/* .box-bd {
   height: 615px;
 }
 
@@ -98,5 +98,46 @@
 .box-bd .list {
   float: left;
   height: 615px;
+  width: 991px;
+} */
+.box-bd {
+  height: 315px;
+}
+
+.box-bd .promo-list {
+  float: left;
+  height: 315px;
+  width: 234px;
+}
+
+.box-bd .promo-list li {
+  z-index: 1;
+  width: 234px;
+  height: 300px;
+  margin-bottom: 14.5px;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.box-bd .promo-list li:hover {
+  z-index: 2;
+  -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, .1);
+  -webkit-transform: translate3d(0, -2px, 0);
+  transform: translate3d(0, -2px, 0);
+}
+
+.box-bd .promo-list li img {
+  width: 234px;
+  height: 300px;
+}
+
+.box-bd .promo-list img {
+  width: 234px;
+}
+
+.box-bd .list {
+  float: left;
+  height: 315px;
   width: 991px;
 }
